@@ -20,6 +20,7 @@
 package org.elasticsearch.index.mapper;
 
 import org.apache.lucene.search.Query;
+import org.elasticsearch.common.time.DateFormatter;
 import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.index.query.QueryShardContext;
 import org.elasticsearch.plugins.MapperPlugin;
@@ -29,8 +30,12 @@ import java.util.Collections;
 import java.util.Map;
 
 public class TestRuntimeField extends RuntimeFieldType {
-    public TestRuntimeField(String name) {
+
+    private final String type;
+
+    public TestRuntimeField(String name, String type) {
         super(name, Collections.emptyMap());
+        this.type = type;
     }
 
     @Override
@@ -44,7 +49,7 @@ public class TestRuntimeField extends RuntimeFieldType {
 
     @Override
     public String typeName() {
-        return "test";
+        return type;
     }
 
     @Override
@@ -55,7 +60,42 @@ public class TestRuntimeField extends RuntimeFieldType {
     public static class Plugin extends org.elasticsearch.plugins.Plugin implements MapperPlugin {
         @Override
         public Map<String, Parser> getRuntimeFieldTypes() {
-            return Collections.singletonMap("test", (name, node, parserContext) -> new TestRuntimeField(name));
+            return Map.of(
+                "string", (name, node, parserContext) -> new TestRuntimeField(name, "string"),
+                "double", (name, node, parserContext) -> new TestRuntimeField(name, "double"),
+                "long", (name, node, parserContext) -> new TestRuntimeField(name, "long"),
+                "boolean", (name, node, parserContext) -> new TestRuntimeField(name, "boolean"),
+                "date", (name, node, parserContext) -> new TestRuntimeField(name, "date"));
+        }
+
+        @Override
+        public DynamicRuntimeFieldsBuilder getDynamicRuntimeFieldsBuilder() {
+            return new DynamicRuntimeFieldsBuilder() {
+                @Override
+                public RuntimeFieldType newDynamicStringField(String name) {
+                    return new TestRuntimeField(name, "string");
+                }
+
+                @Override
+                public RuntimeFieldType newDynamicLongField(String name) {
+                    return new TestRuntimeField(name, "long");
+                }
+
+                @Override
+                public RuntimeFieldType newDynamicDoubleField(String name) {
+                    return new TestRuntimeField(name, "double");
+                }
+
+                @Override
+                public RuntimeFieldType newDynamicBooleanField(String name) {
+                    return new TestRuntimeField(name, "boolean");
+                }
+
+                @Override
+                public RuntimeFieldType newDynamicDateField(String name, DateFormatter dateFormatter) {
+                    return new TestRuntimeField(name, "date");
+                }
+            };
         }
     }
 }
